# cheddest

./: .gitignore  LICENSE.txt  flake.nix  pyproject.toml
src/cheddest/: app.py  intervals.py
tests/: test_intervals.py
